Minor fix for mobile wrapping

--- a/src/assets/styles/global.scss
+++ b/src/assets/styles/global.scss
@@ -56,6 +56,8 @@ blockquote {
   border-left: 0;
   border-right: 0;
   box-shadow: 0 0 1.5em rgba($secondary, 0.5);
+  overflow-x: auto;
+
 
   h2, h4 {
     color: $black;
@@ -75,7 +77,6 @@ blockquote {
   margin-bottom: 15px;
 
   tbody tr {
-
     &:nth-child(odd) {
       background-color: $lightGrey;
     }
